--- a/flask_app/templates/profile.html
+++ b/flask_app/templates/profile.html
@@ -75,6 +75,10 @@
                                 </div>
                             {% endfor %}
                         </div>
+                        {% if session['user_id'] == post.creator.id%}
+                            <a class="table-button" href="/posts/update/{{post.id}}">Edit</a>
+                            <a class="table-button" href="/posts/destroy/{{post.id}}">Delete</a>
+                        {%endif%}
                 
                     </div>
             {% endfor %}
